# spi

./: dune-project  spi.opam
.github/workflows/: build-and-test.yml
lib/: dune  spi.ml  spi.mli  spi_intf.ml  spi_stubs.c
test/: dune
